[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokentip"
version = "0.1.0"
description = "Official Python SDK for the TokenTip API — tips that buy AI inference credit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TokenTip", email = "dj@codetestcode.io" }]
keywords = ["tokentip", "openrouter", "webhooks", "sse", "api"]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://tokentip.to"
Repository = "https://github.com/copyleftdev/tokentip-python"
Issues = "https://github.com/copyleftdev/tokentip-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["tokentip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
